// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LocationItem — snapshots > matches snapshot with fun fact 1`] = `
<div>
  <div
    style="padding: 10px 12px; background: rgba(255, 255, 255, 0.03); border-radius: 8px; border: 1px solid rgba(255, 255, 255, 0.05);"
  >
    <div
      style="display: flex; gap: 7px; align-items: flex-start;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-map-pin"
        fill="none"
        height="12"
        stroke="#e74c3c"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="margin-top: 2px; flex-shrink: 0;"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
        />
        <circle
          cx="12"
          cy="10"
          r="3"
        />
      </svg>
      <p
        style="font-size: 12px; color: #c0c0d0; margin: 0px; line-height: 1.5; font-weight: 600;"
      >
        City Hall
      </p>
    </div>
    <div
      style="display: flex; gap: 7px; align-items: flex-start; margin-top: 6px;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-lightbulb"
        fill="none"
        height="11"
        stroke="#f5c518"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="margin-top: 2px; flex-shrink: 0;"
        viewBox="0 0 24 24"
        width="11"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
        />
        <path
          d="M9 18h6"
        />
        <path
          d="M10 22h4"
        />
      </svg>
      <p
        style="font-size: 11px; color: #6a6a85; margin: 0px; line-height: 1.4; font-style: italic;"
      >
        Used for the finale scene.
      </p>
    </div>
  </div>
</div>
`;

exports[`LocationItem — snapshots > matches snapshot without fun fact 1`] = `
<div>
  <div
    style="padding: 10px 12px; background: rgba(255, 255, 255, 0.03); border-radius: 8px; border: 1px solid rgba(255, 255, 255, 0.05);"
  >
    <div
      style="display: flex; gap: 7px; align-items: flex-start;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-map-pin"
        fill="none"
        height="12"
        stroke="#e74c3c"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="margin-top: 2px; flex-shrink: 0;"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
        />
        <circle
          cx="12"
          cy="10"
          r="3"
        />
      </svg>
      <p
        style="font-size: 12px; color: #c0c0d0; margin: 0px; line-height: 1.5; font-weight: 600;"
      >
        City Hall
      </p>
    </div>
  </div>
</div>
`;
